adjust example training

--- a/examples/02_model_training.ipynb
+++ b/examples/02_model_training.ipynb
@@ -91,7 +91,7 @@
     {
      "data": {
       "text/plain": [
-       "{'batch_mode': True, 'gpu': False, 'telegram_logger': False}"
+       "{'batch_mode': True, 'gpu': True, 'telegram_logger': False}"
       ]
      },
      "execution_count": 4,
@@ -156,8 +156,8 @@
        " 'source_list': False,\n",
        " 'arch_name': 'filter_deep',\n",
        " 'loss_func': 'splitted_mse',\n",
-       " 'num_epochs': 5,\n",
-       " 'inspection': False}"
+       " 'num_epochs': 10,\n",
+       " 'inspection': True}"
       ]
      },
      "execution_count": 6,
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -272,16 +272,24 @@
      "text": [
       "\n",
       " Train config:\n",
-      "{'data_path': './example_data/', 'model_path': './build/example_model/example.model', 'pre_model': 'none', 'norm_path': 'none', 'batch_mode': True, 'gpu': False, 'telegram_logger': False, 'bs': 100, 'lr': 0.001, 'fourier': True, 'arch_name': 'filter_deep', 'loss_func': 'splitted_mse', 'num_epochs': 5, 'inspection': False, 'param_scheduling': True, 'lr_start': 0.001, 'lr_max': 0.005, 'lr_stop': 0.0007, 'source_list': False} \n",
+      "{'data_path': './example_data/', 'model_path': './build/example_model/example.model', 'pre_model': 'none', 'norm_path': 'none', 'batch_mode': True, 'gpu': True, 'telegram_logger': False, 'bs': 100, 'lr': 0.001, 'fourier': True, 'arch_name': 'filter_deep', 'loss_func': 'splitted_mse', 'num_epochs': 10, 'inspection': True, 'param_scheduling': True, 'lr_start': 0.07, 'lr_max': 0.3, 'lr_stop': 0.05, 'source_list': False} \n",
       "\n",
       "Overwriting existing model file!\n",
       "Start training of the model.\n",
       "\n",
-      "[0, 354.91815185546875, 347.5657958984375, '00:21']\n",
-      "[1, 330.97064208984375, 314.1307373046875, '00:21']\n",
-      "[2, 307.658447265625, 281.0434265136719, '00:21']\n",
-      "[3, 288.22705078125, 246.29566955566406, '00:21']\n",
-      "[4, 273.37591552734375, 231.79647827148438, '00:21']\n",
+      "[0, 61.51641845703125, 28.47515869140625, '00:05']\n",
+      "[1, 32.67810821533203, 27.699613571166992, '00:04']\n",
+      "[2, 20.860370635986328, 15.053994178771973, '00:04']\n",
+      "[3, 14.740080833435059, 12.130480766296387, '00:04']\n",
+      "[4, 11.530167579650879, 9.296224594116211, '00:04']\n",
+      "[5, 9.747480392456055, 8.740177154541016, '00:04']\n",
+      "[6, 8.637312889099121, 8.697736740112305, '00:04']\n",
+      "[7, 7.847763538360596, 7.391854763031006, '00:04']\n",
+      "[8, 7.262141227722168, 7.255746364593506, '00:04']\n",
+      "[9, 6.8124165534973145, 7.031745910644531, '00:04']\n",
+      "\n",
+      "Finished Epoch 10, model saved.\n",
+      "\n",
       "\n",
       "Plotting Loss for: example\n",
       "\n"
@@ -296,12 +304,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "At the end of the training process the loss plot is created automatically."
+    "### Creating the Loss Plot\n",
+    "\n",
+    "At the end of the training process the loss plot is created automatically. Nethertheless, it can also be created using `--mode=plot_loss` for the `radionets_training` executable."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " Train config:\n",
+      "{'data_path': './example_data/', 'model_path': './build/example_model/example.model', 'pre_model': 'none', 'norm_path': 'none', 'batch_mode': True, 'gpu': True, 'telegram_logger': False, 'bs': 100, 'lr': 0.001, 'fourier': True, 'arch_name': 'filter_deep', 'loss_func': 'splitted_mse', 'num_epochs': 10, 'inspection': True, 'param_scheduling': True, 'lr_start': 0.001, 'lr_max': 0.005, 'lr_stop': 0.0007, 'source_list': False} \n",
+      "\n",
+      "Start plotting loss.\n",
+      "\n",
+      "\n",
+      "Load pretrained model: example\n",
+      "\n",
+      "\n",
+      "Plotting Learning rate for: example\n",
+      "\n",
+      "\n",
+      "Plotting Loss for: example\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "!radionets_training --mode=plot_loss ./default_train_config.toml"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -318,10 +359,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7efdea1458b0>"
+       "<IPython.lib.display.IFrame at 0x7f4d62ce4af0>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,11 +372,116 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Example Predictions\n",
+    "\n",
+    "When using the `inspection=True` example predictions are created after the training process is finished. These can be found in the model directory."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"800\"\n",
+       "            height=\"450\"\n",
+       "            src=\"./build/example_model/prediction_0.pdf\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7f4d62ce48e0>"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "IFrame(src=\"./build/example_model/prediction_0.pdf\", width=800, height=450)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Find LR\n",
+    "\n",
+    "Another feature is the find learning rate functionality, which uses the implementation from [fastai](https://github.com/fastai/fastai). The created plot can be used to get an idea of the best suited learning rate for the training process. It can be enabled by using the `radionets_training` executable with `--mode=lr_find`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " Train config:\n",
+      "{'data_path': './example_data/', 'model_path': './build/example_model/example.model', 'pre_model': 'none', 'norm_path': 'none', 'batch_mode': True, 'gpu': True, 'telegram_logger': False, 'bs': 100, 'lr': 0.001, 'fourier': True, 'arch_name': 'filter_deep', 'loss_func': 'splitted_mse', 'num_epochs': 10, 'inspection': True, 'param_scheduling': True, 'lr_start': 0.001, 'lr_max': 0.005, 'lr_stop': 0.0007, 'source_list': False} \n",
+      "\n",
+      "Start lr_find.\n",
+      "\n",
+      "\n",
+      "Plotting Lr vs Loss for architecture: filter_deep\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "!radionets_training --mode=lr_find ./default_train_config.toml"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"800\"\n",
+       "            height=\"450\"\n",
+       "            src=\"./build/example_model/lr_loss.pdf\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7f4d62ce4550>"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "IFrame(src=\"./build/example_model/lr_loss.pdf\", width=800, height=450)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It is recommended to choose the learning rate where the loss curve has the steepest gradient."
+   ]
   }
  ],
  "metadata": {
