test eval changes

--- a/examples/02_model_training.ipynb
+++ b/examples/02_model_training.ipynb
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -277,21 +277,24 @@
       "Overwriting existing model file!\n",
       "Start training of the model.\n",
       "\n",
-      "[0, 61.51641845703125, 28.47515869140625, '00:05']\n",
-      "[1, 32.67810821533203, 27.699613571166992, '00:04']\n",
-      "[2, 20.860370635986328, 15.053994178771973, '00:04']\n",
-      "[3, 14.740080833435059, 12.130480766296387, '00:04']\n",
-      "[4, 11.530167579650879, 9.296224594116211, '00:04']\n",
-      "[5, 9.747480392456055, 8.740177154541016, '00:04']\n",
-      "[6, 8.637312889099121, 8.697736740112305, '00:04']\n",
-      "[7, 7.847763538360596, 7.391854763031006, '00:04']\n",
-      "[8, 7.262141227722168, 7.255746364593506, '00:04']\n",
-      "[9, 6.8124165534973145, 7.031745910644531, '00:04']\n",
+      "[0, 60.859710693359375, 31.016109466552734, '00:05']\n",
+      "[1, 34.309425354003906, 24.508316040039062, '00:04']\n",
+      "[2, 21.874887466430664, 14.801036834716797, '00:04']\n",
+      "[3, 15.244681358337402, 12.179502487182617, '00:04']\n",
+      "[4, 11.919840812683105, 10.447869300842285, '00:04']\n",
+      "[5, 10.0645112991333, 9.625311851501465, '00:04']\n",
+      "[6, 8.895692825317383, 8.033062934875488, '00:04']\n",
+      "[7, 8.0844087600708, 7.987521171569824, '00:04']\n",
+      "[8, 7.476557731628418, 7.356611251831055, '00:04']\n",
+      "[9, 7.045889854431152, 7.03699254989624, '00:04']\n",
       "\n",
       "Finished Epoch 10, model saved.\n",
       "\n",
       "\n",
       "Plotting Loss for: example\n",
+      "\n",
+      "\n",
+      "Load pretrained model: example\n",
       "\n"
      ]
     }
@@ -382,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -399,10 +402,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f4d62ce48e0>"
+       "<IPython.lib.display.IFrame at 0x7f4d62ce4280>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
