adjust training example

--- a/examples/02_model_training.ipynb
+++ b/examples/02_model_training.ipynb
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -362,10 +362,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f4d62ce4af0>"
+       "<IPython.lib.display.IFrame at 0x7f4d62ce47f0>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -395,23 +395,23 @@
        "        <iframe\n",
        "            width=\"800\"\n",
        "            height=\"450\"\n",
-       "            src=\"./build/example_model/prediction_0.pdf\"\n",
+       "            src=\"./build/example_model/evaluation/prediction_0.pdf\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f4d62ce4280>"
+       "<IPython.lib.display.IFrame at 0x7f4d62ce48b0>"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "IFrame(src=\"./build/example_model/prediction_0.pdf\", width=800, height=450)"
+    "IFrame(src=\"./build/example_model/evaluation/prediction_0.pdf\", width=800, height=450)"
    ]
   },
   {
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -467,10 +467,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f4d62ce4550>"
+       "<IPython.lib.display.IFrame at 0x7f4d62ce4310>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
