--- a/examples/01_dataset_simulation.ipynb
+++ b/examples/01_dataset_simulation.ipynb
@@ -79,7 +79,7 @@
    "source": [
     "### mode\n",
     "\n",
-    "The only option here is to enable the `batch_mode` option. This is necessary when you are running the analysis on a machine with queuing systems like `slurm`. It will disable all user input prompts."
+    "The only option here is to enable the `quiet` option. This is necessary when you are running the analysis on a machine with queuing systems like `slurm`. It will disable all user input prompts."
    ]
   },
   {
