--- a/examples/02_model_training.ipynb
+++ b/examples/02_model_training.ipynb
@@ -80,7 +80,7 @@
    "source": [
     "### mode\n",
     "\n",
-    "In this section, three options are available. One is he possibility to enable `batch_mode`. This is necessary when you are running the analysis on a machine with queuing systems like `slurm`. It will disable all user input prompts. With the `gpu` keyword you can enable to use a gpu device for the training. The last option is to enable the `telegram_logger`, which will send training information to a telegram bot. Before this feature can be used, the telegram logger has to be configured. Detailed instructions can be found in [has to be specified!]."
+    "In this section, three options are available. One is he possibility to enable `quiet`. This is necessary when you are running the analysis on a machine with queuing systems like `slurm`. It will disable all user input prompts. With the `gpu` keyword you can enable to use a gpu device for the training. The last option is to enable the `telegram_logger`, which will send training information to a telegram bot. Before this feature can be used, the telegram logger has to be configured. Detailed instructions can be found in [has to be specified!]."
    ]
   },
   {
