--- a/examples/04_filter_deep.ipynb
+++ b/examples/04_filter_deep.ipynb
@@ -43,7 +43,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Example training script in `filter_deep_toml/training_filter_deep.toml`. The `MSE`-Loss was used as loss function."
+    "Example training script in `.rc/training_filter_deep.toml`. The `MSE`-Loss was used as loss function."
    ]
   },
   {
