--- a/examples/04_filter_deep.ipynb
+++ b/examples/04_filter_deep.ipynb
@@ -84,9 +84,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "radionet_kernel",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "radionet_kernel"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -98,7 +98,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
