--- a/examples/07_benchmark_testset.ipynb
+++ b/examples/07_benchmark_testset.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
     "from radionets.simulations.utils import read_config, check_outpath, adjust_outpath, add_noise\n",
     "from radionets.simulations.gaussians import create_grid, create_ext_gauss_bundle\n",
     "from radionets.simulations.simulate import sample_fft_images\n",
-    "from radionets.dl_framework.data import save_fft_pair_list\n",
+    "from radionets.dl_framework.data import save_fft_pair\n",
     "import numpy as np\n",
     "import h5py\n",
     "from tqdm import tqdm\n",
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,14 +113,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 20/20 [00:07<00:00,  2.60it/s]\n"
+      "100%|██████████| 10/10 [00:03<00:00,  2.71it/s]\n"
      ]
     }
    ],
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
     "    path for path in s_paths if re.findall(f\"source_test\", path.name)\n",
     "]\n",
     "\n",
-    "# create and save fft without noise\n",
+    "create and save fft without noise\n",
     "for p in s_paths:\n",
     "    f = h5py.File(p, \"r\")\n",
     "    s = np.array(f[\"sources\"])\n",
@@ -179,7 +179,7 @@
     "    bundle_fft = np.array([np.fft.fftshift(np.fft.fft2(img)) for img in images])\n",
     "    out = p.parent/\"clean\"/p.name.replace(\"source\", \"fft\")\n",
     "    out.parent.mkdir(exist_ok=True)\n",
-    "    save_fft_pair_list(out, bundle_fft, s, 0)\n",
+    "    save_fft_pair(out, bundle_fft, s)\n",
     "    f.close()\n",
     "\n",
     "# create and save fft with noise\n",
@@ -187,11 +187,11 @@
     "    f = h5py.File(p, \"r\")\n",
     "    s = np.array(f[\"sources\"])\n",
     "    images = s.copy()\n",
-    "    images = add_noise(images)\n",
+    "    images = add_noise(images, 30)\n",
     "    bundle_fft = np.array([np.fft.fftshift(np.fft.fft2(img)) for img in images])\n",
     "    out = p.parent/\"noise\"/p.name.replace(\"source\", \"fft\")\n",
     "    out.parent.mkdir(exist_ok=True)\n",
-    "    save_fft_pair_list(out, bundle_fft, s, 0)\n",
+    "    save_fft_pair(out, bundle_fft, s)\n",
     "    f.close()"
    ]
   },
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
      "text": [
       "0it [00:00, ?it/s]\n",
       "0it [00:00, ?it/s]\n",
-      "  0%|          | 0/20 [00:00<?, ?it/s]"
+      "  0%|          | 0/10 [00:00<?, ?it/s]"
      ]
     },
     {
@@ -289,7 +289,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 20/20 [06:38<00:00, 19.93s/it]\n"
+      "100%|██████████| 10/10 [03:14<00:00, 19.42s/it]\n"
      ]
     }
    ],
@@ -469,9 +469,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "radionet_kernel",
    "language": "python",
-   "name": "python3"
+   "name": "radionet_kernel"
   },
   "language_info": {
    "codemirror_mode": {
@@ -483,7 +483,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
