Small changes to notebook

--- a/examples/07_benchmark_testset.ipynb
+++ b/examples/07_benchmark_testset.ipynb
@@ -69,6 +69,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "noise_level = 30"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [],
@@ -169,13 +178,11 @@
     "    path for path in s_paths if re.findall(f\"source_test\", path.name)\n",
     "]\n",
     "\n",
-    "create and save fft without noise\n",
+    "# create and save fft without noise\n",
     "for p in s_paths:\n",
     "    f = h5py.File(p, \"r\")\n",
     "    s = np.array(f[\"sources\"])\n",
     "    images = s.copy()\n",
-    "    if noise:\n",
-    "        images = add_noise(images)\n",
     "    bundle_fft = np.array([np.fft.fftshift(np.fft.fft2(img)) for img in images])\n",
     "    out = p.parent/\"clean\"/p.name.replace(\"source\", \"fft\")\n",
     "    out.parent.mkdir(exist_ok=True)\n",
@@ -187,7 +194,7 @@
     "    f = h5py.File(p, \"r\")\n",
     "    s = np.array(f[\"sources\"])\n",
     "    images = s.copy()\n",
-    "    images = add_noise(images, 30)\n",
+    "    images = add_noise(images, noise_level)\n",
     "    bundle_fft = np.array([np.fft.fftshift(np.fft.fft2(img)) for img in images])\n",
     "    out = p.parent/\"noise\"/p.name.replace(\"source\", \"fft\")\n",
     "    out.parent.mkdir(exist_ok=True)\n",
