--- a/examples/01_dataset_simulation.ipynb
+++ b/examples/01_dataset_simulation.ipynb
@@ -573,7 +573,7 @@
     "\n",
     "amp_scaled = $\\log_{10}\\left(\\text{amp} + 1\\cdot10^{-10} \\right)/10 + 1$\n",
     "\n",
-    "The scaling has to be taken into account when doing the inverse Fourier transformation for the source reconstruction in local space. Additinally, amplitude and phase must first be converted into real and imaginary parts."
+    "The scaling has to be taken into account when doing the inverse Fourier transformation for the source reconstruction in local space. Additionally, amplitude and phase must first be converted into real and imaginary parts."
    ]
   },
   {
