Add sentence about the limited training tim

--- a/examples/03_model_evaluation.ipynb
+++ b/examples/03_model_evaluation.ipynb
@@ -388,7 +388,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Example reconstructed source image for the prediction above. The jet angle is calculated using a [PCA](https://en.wikipedia.org/wiki/Principal_component_analysis) for prediction and truth. "
+    "Example reconstructed source image for the prediction above. The jet angle is calculated using a [PCA](https://en.wikipedia.org/wiki/Principal_component_analysis) for prediction and truth. Due to the limited training time in this example, the prediction is very reasonable."
    ]
   },
   {
