--- a/docs/changes/143.optimization.rst
+++ b/docs/changes/143.optimization.rst
@@ -1,1 +1,1 @@
-Optimize ``evaluation.utils.trunc_rvs`` with numba, providing functions compiled for cpu, parallel cpu and cuda computation.
+Optimize ``evaluation.utils.trunc_rvs`` with numba, providing functions compiled for cpu and parallel cpu computation.
